k3s/planka/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: planka
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-to-planka
  namespace: planka
spec:
  podSelector:
    matchLabels:
      app: planka
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 1337
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-planka-to-postgres
  namespace: planka
spec:
  podSelector:
    matchLabels:
      app: planka-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: planka
      ports:
        - protocol: TCP
          port: 5432
